--- a/imad-evento-front/styles/globals.css
+++ b/imad-evento-front/styles/globals.css
@@ -734,6 +734,9 @@ body.mobile-nav-active #mobile-nav-toggle {
   background: radial-gradient(#f82249 50%, rgba(101, 111, 150, 0.15) 52%);
   border-radius: 50%;
   display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   overflow: hidden;
 }
@@ -802,6 +805,86 @@ body.mobile-nav-active #mobile-nav-toggle {
   border-radius: 0;
 }
 
+
+#intro .support {
+  width: 80px;
+  height: 80px;
+  background: radial-gradient(#ffffff 50%, rgba(101, 111, 150, 0.15) 52%);
+  border-radius: 50%;
+  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+#intro .support:hover{
+  cursor: pointer;
+  transform: scale(0.8);
+}
+#intro .support::after {
+  content: '';
+  position: absolute;
+  left: 20%;
+  top: 20%;
+  -webkit-transform: translateX(-40%) translateY(-50%);
+  transform: translateX(-40%) translateY(-50%);
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  
+  z-index: 100;
+  transition: all 200ms cubic-bezier(0.80, 0.055, 0.675, 0.19);
+}
+
+#intro .support:before {
+  content: '';
+  position: absolute;
+    width: 80px;
+  height: 80px;
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+  -webkit-animation: pulsate-btn 2s;
+  animation: pulsate-btn 2s;
+  -webkit-animation-direction: forwards;
+  animation-direction: forwards;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: steps;
+  animation-timing-function: steps;
+  opacity: 1;
+  border-radius: 50%;
+  border: 2px solid rgba(163, 163, 163, 0.4);
+  top: -15%;
+  left: -15%;
+  background: rgba(198, 16, 0, 0);
+}
+
+#intro .support:hover::after {
+  border-left: 15px solid #524a4c;
+  -webkit-transform: scale(15);
+  transform: scale(15);
+}
+
+#intro .support:hover::before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translateX(-40%) translateY(-50%);
+  transform: translateX(-40%) translateY(-50%);
+  width: 0;
+  height: 0;
+  border: none;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 15px solid #fff;
+  z-index: 200;
+  -webkit-animation: none;
+  animation: none;
+  border-radius: 0;
+}
 #intro .about-btn {
   font-family: "Raleway", sans-serif;
   font-weight: 500;
@@ -2718,7 +2801,7 @@ button {
 .cardmsg {
   position: absolute ;
   bottom: 30px;
-  right: 120px;
+  right: 90px;
   width: 450px;
   height: 80%;
   background-color: white;
