--- a/imad-evento-front/styles/globals.css
+++ b/imad-evento-front/styles/globals.css
@@ -2576,7 +2576,10 @@ button {
   transition: 300ms ease;
 }
 .custum-file-upload {
-  height:70%;
+  height:40%;
+  z-index: 100000;
+  top: 200px;
+  left: 35%;
   width: 250px;
   margin: auto;
   display: flex;
@@ -3047,3 +3050,114 @@ overflow-y: auto;
     opacity: 0;
   }
 }
+.loader {
+  position: relative;
+  width: 54px;
+  height: 54px;
+  border-radius: 10px;
+}
+
+.loader div {
+  width: 8%;
+  height: 24%;
+  background: rgb(255, 255, 255);
+  position: absolute;
+  left: 50%;
+  top: 30%;
+  opacity: 0;
+  border-radius: 50px;
+  box-shadow: 0 0 3px rgba(0,0,0,0.2);
+  animation: fade458 1s linear infinite;
+}
+
+@keyframes fade458 {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0.25;
+  }
+}
+
+.loader .bar1 {
+  transform: rotate(0deg) translate(0, -130%);
+  animation-delay: 0s;
+}
+
+.loader .bar2 {
+  transform: rotate(30deg) translate(0, -130%);
+  animation-delay: -1.1s;
+}
+
+.loader .bar3 {
+  transform: rotate(60deg) translate(0, -130%);
+  animation-delay: -1s;
+}
+
+.loader .bar4 {
+  transform: rotate(90deg) translate(0, -130%);
+  animation-delay: -0.9s;
+}
+
+.loader .bar5 {
+  transform: rotate(120deg) translate(0, -130%);
+  animation-delay: -0.8s;
+}
+
+.loader .bar6 {
+  transform: rotate(150deg) translate(0, -130%);
+  animation-delay: -0.7s;
+}
+
+.loader .bar7 {
+  transform: rotate(180deg) translate(0, -130%);
+  animation-delay: -0.6s;
+}
+
+.loader .bar8 {
+  transform: rotate(210deg) translate(0, -130%);
+  animation-delay: -0.5s;
+}
+
+.loader .bar9 {
+  transform: rotate(240deg) translate(0, -130%);
+  animation-delay: -0.4s;
+}
+
+.loader .bar10 {
+  transform: rotate(270deg) translate(0, -130%);
+  animation-delay: -0.3s;
+}
+
+.loader .bar11 {
+  transform: rotate(300deg) translate(0, -130%);
+  animation-delay: -0.2s;
+}
+
+.loader .bar12 {
+  transform: rotate(330deg) translate(0, -130%);
+  animation-delay: -0.1s;
+}
+
+.loader2 {
+  width: 200px; /* Adjust the width based on your design */
+  height: 10px;
+  background: linear-gradient(to right, #0000 calc(1*100%/6), #fff 0 calc(3*100%/6), #0000 0),
+              linear-gradient(to right, #0000 calc(2*100%/6), #fff 0 calc(4*100%/6), #0000 0),
+              linear-gradient(to right, #0000 calc(3*100%/6), #fff 0 calc(5*100%/6), #0000 0);
+  background-size: 200px 100%; /* Adjust the background-size to match the width */
+  background-repeat: no-repeat;
+  animation: matrix 1s infinite linear;
+}
+
+@keyframes matrix {
+  0% {
+    background-position: 0 0, 0 0, 0 0;
+  }
+  100% {
+    background-position: 200px 0, 200px 0, 200px 0;
+  }
+}
+
+    
